--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -41,7 +41,7 @@
         <ul>
             <li>Feature: Code completion features for client-extensions.yaml</li>
             <li>Feature: Code completion features for rest-config.yaml</li>
-            <li>Feature: Code completion and references for JSP taglibs refering to javascript modules (e.g. react:component)</li>
+            <li>Feature: Code completion and references for JSP taglibs referring to javascript modules (e.g. react:component)</li>
             <li>Feature: Add support for date-time in data-lfr-editable-type (see LPS-154775)</li>
             <li>Feature: Add date_time field type for web content structures (see LPS-178624)</li>
             <li>Feature: show deprecation warnings for deprecated or removed taglibs or attributes in JSP files</li>
