Bugfix: Missing implicit variables workflowContext, roles and user in scripted-assignment tag for workflow definitions

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -35,6 +35,7 @@
             <li>Feature: check if service-builder and rest-builder maven plugins match the used liferay version</li>
             <li>Feature: check if portal-web dependency matches the used liferay version</li>
             <li>Bugfix: fix encoding when executing Poshi Scripts (UTF-8 instead of system dependant encoding)</li>
+            <li>Bugfix: Missing implicit variables workflowContext, roles and user in scripted-assignment tag for workflow definitions</li>
             <li>Change: Update support for IntelliJ 2023.3, dropped support for older versions</li>
         </ul>
 
