updated some osgi properties

--- a/src/main/resources/ComponentPropertiesDocumentationBundle.properties
+++ b/src/main/resources/ComponentPropertiesDocumentationBundle.properties
@@ -1,3 +1,10 @@
+com.liferay.dynamic.data.mapping.form.field.type.DDMFormFieldType.ddm.form.field.type.description=provide the language key for the description text. Make sure the translated value is defined in the Language.properties file.
+com.liferay.dynamic.data.mapping.form.field.type.DDMFormFieldType.ddm.form.field.type.display.order=set an integer or floating point value to determine where the field is displayed in the Form Builder sidebar. Fields with the same value are ordered randomly.
+com.liferay.dynamic.data.mapping.form.field.type.DDMFormFieldType.ddm.form.field.type.icon=decide which icon type to use for your field. Choose any Clay Icon.
+com.liferay.dynamic.data.mapping.form.field.type.DDMFormFieldType.ddm.form.field.type.label=provide the language key for the label text. Make sure the translated value is defined in the Language.properties file.
+com.liferay.dynamic.data.mapping.form.field.type.DDMFormFieldType.ddm.form.field.type.name=provide the field type identifier. This is used to identify the field internally and in other components.
+com.liferay.dynamic.data.mapping.form.field.type.DDMFormFieldType.ddm.form.field.type.scope=By default, a custom form field is only used in the Forms application. To specify explicitly which applications should enable the form field type.
+com.liferay.dynamic.data.mapping.storage.DDMStorageAdapter.ddm.storage.adapter.type=The property provides an identifier so that your service is registered as a unique DDMStorageAdapter implementation.
 javax.portlet.Portlet.javax.portlet.async-supported=If set to 'true', the portlet will support \
     asynchronous processing in resource requests.
 javax.portlet.Portlet.javax.portlet.description=The description element is used to provide text describing the \
