updated some osgi properties

--- a/src/main/resources/ComponentPropertiesDocumentationBundle.properties
+++ b/src/main/resources/ComponentPropertiesDocumentationBundle.properties
@@ -1,3 +1,9 @@
+com.liferay.adaptive.media.content.transformer.ContentTransformer.content.transformer.content.type=Defines the content type that can be managed by this Content Transformer. Use constants from <code>com.liferay.adaptive.media.content.transformer.constants.ContentTransformerContentTypes</code>.
+com.liferay.application.list.PanelApp.panel.category.key=assigns your panel app to a panel category.
+com.liferay.application.list.PanelApp.panel.app.order=specifies the order your panel app appears among other panel apps in the same category.
+com.liferay.asset.kernel.model.AssetRendererFactory.javax.portlet.name=sets the portlet that is associated with the asset.
+com.liferay.dispatch.executor.DispatchTaskExecutor.dispatch.task.executor.name=defines the string used for the executor's name in the Job Scheduler UI. If you want your Job Scheduler Task to use localized names, add a language key value for the dispatch.task.executor.name property to the module's resources/content/Language.properties file.
+com.liferay.dispatch.executor.DispatchTaskExecutor.dispatch.task.executor.type=defines a unique type value to match the right Job Scheduler Task Executor and Job Scheduler Trigger.
 com.liferay.dynamic.data.mapping.form.field.type.DDMFormFieldType.ddm.form.field.type.description=provide the language key for the description text. Make sure the translated value is defined in the Language.properties file.
 com.liferay.dynamic.data.mapping.form.field.type.DDMFormFieldType.ddm.form.field.type.display.order=set an integer or floating point value to determine where the field is displayed in the Form Builder sidebar. Fields with the same value are ordered randomly.
 com.liferay.dynamic.data.mapping.form.field.type.DDMFormFieldType.ddm.form.field.type.icon=decide which icon type to use for your field. Choose any Clay Icon.
@@ -5,6 +11,51 @@ com.liferay.dynamic.data.mapping.form.field.type.DDMFormFieldType.ddm.form.field
 com.liferay.dynamic.data.mapping.form.field.type.DDMFormFieldType.ddm.form.field.type.name=provide the field type identifier. This is used to identify the field internally and in other components.
 com.liferay.dynamic.data.mapping.form.field.type.DDMFormFieldType.ddm.form.field.type.scope=By default, a custom form field is only used in the Forms application. To specify explicitly which applications should enable the form field type.
 com.liferay.dynamic.data.mapping.storage.DDMStorageAdapter.ddm.storage.adapter.type=The property provides an identifier so that your service is registered as a unique DDMStorageAdapter implementation.
+com.liferay.exportimport.kernel.lar.StagedModelDataHandler.javax.portlet.name=You must associate the portlets you wish to handle with this service, so they function properly in the export/import environment.
+com.liferay.exportimport.staged.model.repository.StagedModelRepository.model.class.name=You must associate the model class you wish to handle with this service, so it's recognized by the data handlers leveraging it.
+com.liferay.frontend.taglib.servlet.taglib.ScreenNavigationEntry.screen.navigation.entry.order=set your priority property which determines what order items appear in the side navigation.
+com.liferay.item.selector.ItemSelectorView.item.selector.view.order=property's value for multiple views with the same criteria. The lower the value is, the more priority it has, and the sooner it will appear in the order.
+com.liferay.portal.deploy.hot.CustomJspBag.context.id=Your custom JSP bag class name.
+com.liferay.portal.deploy.hot.CustomJspBag.context.name=A more human-readable name for your service.
+com.liferay.portal.deploy.hot.CustomJspBag.service.ranking=A priority for your implementation. The container chooses the implementation with the highest priority.
+com.liferay.portal.kernel.backgroundtask.BackgroundTaskExecutor.background.task.executor.class.name=provide the full qualified class name of the class used for executing the background task.
+com.liferay.portal.kernel.notifications.UserNotificationHandler.javax.portlet.name=sets the portlet that is associated with the user notification handler.
+com.liferay.portal.kernel.editor.configuration.EditorConfigContributor.editor.config.key=This property declares that the following service is applied for editors identified by the given configuration key. <b>Note:</b> this property can be omitted if targeting all editors of the given portlet.
+com.liferay.portal.kernel.editor.configuration.EditorConfigContributor.editor.name=The name of the editor to apply the configuration, e.g. <code>alloyeditor</code>, <code>ckeditor</code> or <code>ckeditor_bbcode</code>
+com.liferay.portal.kernel.editor.configuration.EditorConfigContributor.javax.portlet.name=sets the portlet that is associated with the editor configuration.
+com.liferay.portal.kernel.events.LifecycleAction.key=The key of the event the lifecycle action should listen to. The following events are predefined by Liferay: \
+  <ul>\
+  <li>Session: <code>servlet.session.create.events</code>, <code>servlet.session.destroy.events</code></li> \
+  <li>Startup Events: <code>global.startup.events</code>, <code>application.startup.events</code></li> \
+  <li>Shutdown Events: <code>global.shutdown.events</code>, <code>application.shutdown.events</code></li> \
+  <li>Portal Events: <code>servlet.service.events.pre</code>, <code>servlet.service.events.post</code>, <code>login.events.pre</code>, <code>login.events.post</code>, <code>logout.events.pre</code>, <code>logout.events.post</code></li>\
+  </ul>
+com.liferay.portal.kernel.portlet.ConfigurationAction.javax.portlet.name=The portlet name associated to this configuration action.
+com.liferay.portal.kernel.portlet.bridges.mvc.MVCActionCommand.javax.portlet.name=The portlet name associated to this action command.
+com.liferay.portal.kernel.portlet.bridges.mvc.MVCActionCommand.mvc.command.name=The command name to match with the parameter \
+    value <code>ActionRequest.ACTION_NAME</code>. This name cannot contain any \
+    comma (<code>,</code>)
+com.liferay.portal.kernel.portlet.bridges.mvc.MVCRenderCommand.javax.portlet.name=The portlet name associated to this render command.
+com.liferay.portal.kernel.portlet.bridges.mvc.MVCRenderCommand.mvc.command.name=The command name that matches the \
+    parameter value <code>mvcRenderCommandName</code>. This name cannot contain \
+    any comma (<code>,</code>).
+com.liferay.portal.kernel.portlet.bridges.mvc.MVCResourceCommand.javax.portlet.name=The portlet name associated to this resource command.
+com.liferay.portal.kernel.portlet.bridges.mvc.MVCResourceCommand.mvc.command.name=The command name that matches the \
+    <code>ResourceID</code> of the resource request. This name cannot contain any \
+    comma (<code>,</code>).
+com.liferay.portal.kernel.portlet.configuration.icon.PortletConfigurationIcon.javax.portlet.name=sets the portlet that is associated with the portlet configuration icon.
+com.liferay.portal.kernel.search.IndexerPostProcessor.indexer.class.name=the fully qualified class name of the indexed entity or an <code>Indexer</code> class itself.
+com.liferay.portal.kernel.security.permission.propagator.PermissionPropagator.javax.portlet.name=sets the portlet that is associated with the permission propagator.
+com.liferay.portal.kernel.servlet.taglib.TagDynamicIdFactory.tagClassName=provide the full qualified class name of the Taglib you want to customize
+com.liferay.portal.kernel.servlet.taglib.ui.FormNavigatorEntry.form.navigator.entry.order=property for the entry relative to the other entries in the category. The higher the entry's order integer relative to the order of the category's other entries, the higher the entry is listed in the category.
+com.liferay.portal.kernel.template.TemplateContextContributor.type=property should be set to one of the two fields defined in the <code>TemplateContextContributor</code> interface: <code>TYPE_GLOBAL</code> or <code>TYPE_THEME</code>. The <code>TYPE_THEME</code> field should be set if you only wish to inject context-specific variables for your theme; otherwise, setting the <code>TYPE_GLOBAL</code> field affects every context execution in Liferay DXP, like themes, ADTs, DDM templates, etc.
+com.liferay.portal.kernel.template.TemplateHandler.javax.portlet.name=ties your handler to a specific portlet by setting the property javax.portlet.name to your portlet's name.
+com.liferay.portal.kernel.workflow.WorkflowHandler.model.class.name=set model.class.name to the fully qualified class name of the class you passed as the type parameter.
+com.liferay.portal.search.spi.model.index.contributor.ModelDocumentContributor.indexer.class.name=the fully qualified class name of the indexed entity or an <code>Indexer</code> class itself.
+com.liferay.portal.search.spi.model.query.contributor.ModelPreFilterContributor.indexer.class.name=the fully qualified class name of the indexed entity or an <code>Indexer</code> class itself.
+com.liferay.portal.search.spi.model.query.contributor.KeywordQueryContributor.indexer.class.name=the fully qualified class name of the indexed entity or an <code>Indexer</code> class itself.
+com.liferay.portal.search.spi.model.result.contributor.ModelSummaryContributor.indexer.class.name=the fully qualified class name of the indexed entity or an <code>Indexer</code> class itself.
+javax.portlet.filter.PortletFilter.javax.portlet.name=links the filter to the target portlet. Note, multiple portlets can be listed.
 javax.portlet.Portlet.javax.portlet.async-supported=If set to 'true', the portlet will support \
     asynchronous processing in resource requests.
 javax.portlet.Portlet.javax.portlet.description=The description element is used to provide text describing the \
@@ -280,23 +331,7 @@ javax.portlet.Portlet.com.liferay.portlet.active=Set the active value to true if
     default value is true. \n\
     \n\
     This value can be changed at runtime via the Admin portlet.
-javax.portlet.Portlet.com.liferay.portlet.display-category=
-com.liferay.portal.kernel.portlet.bridges.mvc.MVCActionCommand.javax.portlet.name=The portlet name associated to this action command.
-com.liferay.portal.kernel.portlet.bridges.mvc.MVCActionCommand.mvc.command.name=The command name to match with the parameter \
-    value <code>ActionRequest.ACTION_NAME</code>. This name cannot contain any \
-    comma (<code>,</code>)
-com.liferay.portal.kernel.portlet.bridges.mvc.MVCRenderCommand.javax.portlet.name=The portlet name associated to this render command.
-com.liferay.portal.kernel.portlet.bridges.mvc.MVCRenderCommand.mvc.command.name=The command name that matches the \
-    parameter value <code>mvcRenderCommandName</code>. This name cannot contain \
-    any comma (<code>,</code>).
-com.liferay.portal.kernel.portlet.bridges.mvc.MVCResourceCommand.javax.portlet.name=The portlet name associated to this resource command.
-com.liferay.portal.kernel.portlet.bridges.mvc.MVCResourceCommand.mvc.command.name=The command name that matches the \
-    <code>ResourceID</code> of the resource request. This name cannot contain any \
-    comma (<code>,</code>).
-org.osgi.service.http.context.ServletContextHelper.osgi.http.whiteboard.context.name=Name of the Servlet Context Helper. This name can be referred to by Whiteboard services via the osgi.http.whiteboard.context.select property. The syntax of the name is the same as the syntax for a Bundle Symbolic Name. The default Servlet Context Helper is named default. To override the default, register a custom ServletContextHelper service with the name default. If multiple Servlet Context Helper services are registered with the same name, the one with the highest Service Ranking is used. In case of a tie, the service with the lowest service ID wins. In other words, the normal OSGi service ranking applies. \
-    Registrations with an invalid or unspecified name are not used and reflected in the failure DTOs.
-org.osgi.service.http.context.ServletContextHelper.osgi.http.whiteboard.context.path=dditional prefix to the context path for servlets. This property is mandatory. Valid characters are specified in IETF RFC 3986, section 3.3. The context path of the default Servlet Context Helper is /. A custom default Servlet Context Helper may use an alternative path. If the path is invalid or unspecified, the service is not used and reflected in the failure DTOs.
-org.osgi.service.http.context.ServletContextHelper.context.init.=Properties starting with this prefix are provided as init parameters through the ServletContext.getInitParameter and ServletContext.getInitParameterNames methods. The context.init. prefix is removed from the parameter name.
+javax.portlet.Portlet.com.liferay.portlet.display-category=sets the portlet's display category
 javax.servlet.Servlet.osgi.http.whiteboard.context.select=An LDAP-style filter to select the associated ServletContextHelper service to use. Any service property of the Servlet Context Helper can be filtered on. If this property is missing the default Servlet Context Helper is used. \
     For example, to select a Servlet Context Helper with name myCTX provide the following value: \
     (osgi.http.whiteboard.context.name=myCTX) \
@@ -323,3 +358,9 @@ javax.servlet.Filter.osgi.http.whiteboard.filter.pattern=Apply this servlet filt
 javax.servlet.Filter.osgi.http.whiteboard.filter.regex=Apply this servlet filter to the specified URL paths. The paths are specified as regular expressions following the syntax defined in the java.util.regex.Pattern class.
 javax.servlet.Filter.osgi.http.whiteboard.filter.servlet=Apply this servlet filter to the referenced servlet(s) by name.
 javax.servlet.Filter.filter.init.=Properties starting with this prefix are passed as init parameters to the Filter.init method. The filter.init. prefix is removed from the parameter name.
+java.util.ResourceBundle.language.id=The Locale ID to provide a resource bundle for.
+org.osgi.service.http.context.ServletContextHelper.osgi.http.whiteboard.context.name=Name of the Servlet Context Helper. This name can be referred to by Whiteboard services via the osgi.http.whiteboard.context.select property. The syntax of the name is the same as the syntax for a Bundle Symbolic Name. The default Servlet Context Helper is named default. To override the default, register a custom ServletContextHelper service with the name default. If multiple Servlet Context Helper services are registered with the same name, the one with the highest Service Ranking is used. In case of a tie, the service with the lowest service ID wins. In other words, the normal OSGi service ranking applies. \
+    Registrations with an invalid or unspecified name are not used and reflected in the failure DTOs.
+org.osgi.service.http.context.ServletContextHelper.osgi.http.whiteboard.context.path=dditional prefix to the context path for servlets. This property is mandatory. Valid characters are specified in IETF RFC 3986, section 3.3. The context path of the default Servlet Context Helper is /. A custom default Servlet Context Helper may use an alternative path. If the path is invalid or unspecified, the service is not used and reflected in the failure DTOs.
+org.osgi.service.http.context.ServletContextHelper.context.init.=Properties starting with this prefix are provided as init parameters through the ServletContext.getInitParameter and ServletContext.getInitParameterNames methods. The context.init. prefix is removed from the parameter name.
+
