--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,6 +27,7 @@
     <change-notes><![CDATA[
         <p>Version 0.0.19</p>
         <ul>
+            <li>Feature: add deprecation checks for Liferay 2023.Q4</li>
             <li>Bugfix: File references were not working in XML files for Liferay 7.4</li>
         </ul>
 
