--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,11 +2,11 @@
     <id>de.dm.intellij.liferay</id>
     <name>Liferay</name>
     <category>Framework integration</category>
-    <version>0.0.19</version>
+    <version>0.0.20</version>
 
     <vendor email="Dominik.Marks@gmx.de" url="https://github.com/dmarks2">Dominik Marks</vendor>
 
-    <idea-version since-build="233" until-build="233.*" />
+    <idea-version since-build="241" />
 
     <description><![CDATA[
         <p>This plugin adds some features for developing Liferay modules. The following topics have been improved so far</p>
@@ -25,6 +25,11 @@
       ]]></description>
 
     <change-notes><![CDATA[
+        <p>Version 0.0.20</p>
+        <ul>
+            <li>Change: Update support for IntelliJ 2024.1</li>
+        </ul>
+
         <p>Version 0.0.19</p>
         <ul>
             <li>Feature: add deprecation checks for Liferay 2023.Q4</li>
