--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
     <id>de.dm.intellij.liferay</id>
     <name>Liferay</name>
     <category>Framework integration</category>
-    <version>0.0.20</version>
+    <version>0.0.21</version>
 
     <vendor email="Dominik.Marks@gmx.de" url="https://github.com/dmarks2">Dominik Marks</vendor>
 
@@ -25,6 +25,11 @@
       ]]></description>
 
     <change-notes><![CDATA[
+        <p>Version 0.0.21</p>
+        <ul>
+            <li>Feature: add deprecation checks for Liferay 2024.Q1</li>
+        </ul>
+
         <p>Version 0.0.20</p>
         <ul>
             <li>Change: Update support for IntelliJ 2024.1, dropped support for earlier versions</li>
