--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,7 @@
             <li>Feature: add deprecation checks for Liferay 2024.Q1 and Liferay 2024.Q2</li>
             <li>Feature: add quick fix for non-matching plugin or dependency versions in pom.xml (portal-web, service-builder, rest-builder)</li>
             <li>Feature: add support for ADTs for the Date Facet Portlet (available since Liferay 7.4.3.104)</li>
+            <li>Feature: update maven checks for Liferay toolchain (including biz.aqute.bnd and com.liferay.ant.bnd)</li>
         </ul>
 
         <p>Version 0.0.20</p>
