--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -29,6 +29,7 @@
         <ul>
             <li>Feature: add deprecation check for LPS-104241, LPS-175951, LPS-182671</li>
             <li>Feature: deprecation checks for devDependencies in package.json</li>
+            <li>Feature: add support for BundleSiteInitializer directory structures</li>
             <li>Bugfix: Exception occurred after deleting a fragment.json file</li>
         </ul>
 
