--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,7 @@
             <li>Feature: add deprecation check for LPS-104241, LPS-175951, LPS-182671</li>
             <li>Feature: deprecation checks for devDependencies in package.json</li>
             <li>Feature: add support for BundleSiteInitializer directory structures</li>
+            <li>Feature: add documentation lookup for Liferay specific properties in gradle.properties</li>
             <li>Bugfix: Exception occurred after deleting a fragment.json file</li>
         </ul>
 
@@ -379,6 +380,8 @@
         <renameHandler implementation="de.dm.intellij.liferay.language.osgi.MetaConfigurationRenameHandler"/>
         <renameInputValidator implementation="de.dm.intellij.liferay.language.osgi.MetaConfigurationRenameInputValidator" />
         <elementDescriptionProvider implementation="de.dm.intellij.liferay.language.osgi.MetaConfigurationElementDescriptionProvider" />
+
+        <platform.backend.documentation.psiTargetProvider implementation="de.dm.intellij.liferay.gradle.LiferayGradlePropertiesDocumentationTargetProvider" />
 
         <!-- POSHI -->
         <fileType
