--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,7 +30,7 @@
             <li>Feature: add deprecation check for LPS-104241, LPS-175951, LPS-182671</li>
             <li>Feature: deprecation checks for devDependencies in package.json</li>
             <li>Feature: add support for BundleSiteInitializer directory structures</li>
-            <li>Feature: add documentation lookup for Liferay specific properties in gradle.properties</li>
+            <li>Feature: add documentation lookup and code completion for Liferay specific properties in gradle.properties</li>
             <li>Feature: add XPath expression support for Liferay specific helper classes like SAXReaderUtil</li>
             <li>Bugfix: Exception occurred after deleting a fragment.json file</li>
             <li>Bugfix: Finally fixed gradle support for projects using Java 16 or below</li>
