Bugfix: Detecting servlet context imports in Freemarker files did not work for gradle projects (code completion, freemarker debugger)

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -35,6 +35,7 @@
             <li>Feature: add deprecation checks for Liferay 2024.Q3</li>
             <li>Bugfix: Exception occurred after deleting a fragment.json file</li>
             <li>Bugfix: Finally fixed gradle support for projects using Java 16 or below</li>
+            <li>Bugfix: Detecting servlet context imports in Freemarker files did not work for gradle projects (code completion, freemarker debugger)</li>
         </ul>
 
         <p>Version 0.0.21</p>
