--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -33,6 +33,7 @@
             <li>Feature: add documentation lookup and code completion for Liferay specific properties in gradle.properties</li>
             <li>Feature: add XPath expression support for Liferay specific helper classes like SAXReaderUtil</li>
             <li>Feature: add deprecation checks for Liferay 2024.Q3</li>
+            <li>Feature: add support for custom taglib mappings for freemarker from third-party libraries</li>
             <li>Bugfix: Exception occurred after deleting a fragment.json file</li>
             <li>Bugfix: Finally fixed gradle support for projects using Java 16 or below</li>
             <li>Bugfix: Detecting servlet context imports in Freemarker files did not work for gradle projects (code completion, freemarker debugger)</li>
