--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,27 @@
-buildscript {
-    repositories {
-        maven { url "https://cache-redirector.jetbrains.com/intellij-dependencies" }
-        maven { url "https://cache-redirector.jetbrains.com/repo1.maven.org/maven2" }
-        maven { url "https://plugins.gradle.org/m2" }
-    }
-}
-
 plugins {
-    id "org.jetbrains.intellij" version "1.17.4"
+    id "org.jetbrains.intellij.platform" version "2.5.0"
+    id "org.jetbrains.intellij.platform.migration" version "2.5.0"
     id 'de.undercouch.download' version '5.6.0'
 }
+
+apply plugin: 'idea'
+apply plugin: 'org.jetbrains.intellij.platform'
+apply plugin: 'java'
 
 configurations {
     poshi
 }
 
 repositories {
+    mavenCentral()
     maven { url "https://repository-cdn.liferay.com/nexus/content/groups/public/" }
-    maven { url "https://www.jetbrains.com/intellij-repository/releases" }
-    maven { url "https://cache-redirector.jetbrains.com/intellij-dependencies" }
+
+    intellijPlatform {
+        defaultRepositories()
+    }
 }
 
 import de.undercouch.gradle.tasks.download.Download
-
-apply plugin: 'idea'
-apply plugin: 'org.jetbrains.intellij'
-apply plugin: 'java'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_17
@@ -70,13 +66,19 @@ sourceSets {
     }
 }
 
-repositories {
-    mavenCentral()
-}
-
-//https://github.com/JetBrains/intellij-community/tree/master/.idea/libraries
-
 dependencies {
+    intellijPlatform {
+        intellijIdeaUltimate '2025.1'
+
+        bundledPlugins(
+                "JavaScript", "Tomcat", "com.intellij.velocity", "com.intellij.freemarker", "org.jetbrains.idea.maven", /*"Properties",*/
+                /*"java-i18n",*/ "com.intellij.css", /*"sass",*/ /*"JavaEE",*/ "com.intellij.javaee.web", "com.intellij.jsp",
+                "com.intellij.gradle", "org.intellij.intelliLang", /*"uml",*/ "com.intellij.java", "XPathView",
+                //test only?
+                "org.intellij.groovy", /*"junit",*/ "com.intellij.persistence", "com.intellij.database", "org.jetbrains.plugins.yaml"
+        )
+    }
+
     testImplementation group: 'junit', name: 'junit', version: '4.11'
     testImplementation('com.jetbrains.intellij.maven:maven-test-framework:241.14494.240') {
         transitive = false
@@ -121,30 +123,10 @@ dependencies {
     poshiImplementation 'org.slf4j:slf4j-simple:2.0.7'
 }
 
-intellij {
-//    version "IU-2017.3.4"
-//    version "IU-2018.1.1"
-//    version "IU-2018.3.4"
-//    version "IU-2019.3.4"
-//    version "IU-2020.2.1"
-//    version "IU-2020.3"
-//    version.set("IU-2021.1")
-//    version.set("IU-2021.2")
-//    version.set("IU-2021.3")
-//    version.set("IU-2022.1.2")
-//    version.set("IU-2022.3")
-//    version.set("IU-2023.1")
-//    version.set("IU-2023.3")
-    version.set("IU-2024.1")
-    type.set('IU')
-    pluginName.set('Liferay IntelliJ Plugin')
-    plugins.set([
-            'JavaScript', 'Tomcat', 'com.intellij.velocity', 'com.intellij.freemarker', 'maven', 'properties', 'java-i18n', 'com.intellij.css', 'sass', 'JavaEE', 'com.intellij.javaee.web', 'com.intellij.jsp', 'gradle',
-            'org.intellij.intelliLang', 'uml', 'java', 'XPathView',
-            //test only?
-            'Groovy', 'junit', 'com.intellij.persistence', 'DatabaseTools', 'yaml'
-    ])
-    updateSinceUntilBuild.set(false)
+intellijPlatform {
+    pluginConfiguration {
+        name = 'Liferay IntelliJ Plugin'
+    }
 }
 
 runIde {
